--- a/index.html
+++ b/index.html
@@ -20,7 +20,37 @@
             </ul>
         </div>
     </nav>
+<article class="card info-content" style="margin-top: 30px; line-height: 1.8; color: #475569;">
+            <h2 style="color: var(--primary);">Guia Completo: Direitos na Rescisão de Contrato em 2026</h2>
+            <p>Cessar um vínculo laboral em Portugal é um processo que envolve diversos deveres e direitos, tanto para o empregador como para o trabalhador. Com as atualizações no Código do Trabalho, é fundamental compreender como se processam os cálculos em 2026, garantindo que nenhum valor fica por liquidar. Quer se trate de uma caducidade de contrato ou despedimento, os valores podem variar significativamente.</p>
 
+            <h3 style="color: #1e293b; margin-top: 20px;">1. Os Componentes do "Acerto de Contas"</h3>
+            <p>Ao sair de uma empresa, o montante final não se limita ao último salário. Ele é composto por parcelas obrigatórias:</p>
+            <ul>
+                <li><strong>Proporcionais de Subsídios:</strong> Tem direito a receber o valor correspondente aos meses trabalhados no ano da saída (Natal e Férias). Se sair em junho, recebe 6/12 de cada um.</li>
+                <li><strong>Férias Não Gozadas:</strong> Se tem dias de férias acumulados, a empresa deve pagá-los em dinheiro, acrescidos do respetivo subsídio de férias.</li>
+                <li><strong>Horas de Formação:</strong> A lei prevê 40 horas de formação contínua anual. Se não as recebeu nos últimos 3 anos, tem direito ao pagamento em dinheiro (até ao limite de 120 horas).</li>
+            </ul>
+
+            <h3 style="color: #1e293b; margin-top: 20px;">2. Indemnização por Antiguidade e Motivos de Saída</h3>
+            <p>A compensação por antiguidade depende do motivo da cessação. Em 2026, em casos de <strong>Caducidade de Contrato a Termo</strong> por iniciativa da empresa, o trabalhador tem direito a 24 dias de retribuição base por cada ano completo de trabalho. Já no <strong>Despedimento Coletivo ou Extinção de Posto</strong>, o cálculo padrão situa-se nos 14 dias por ano, salvo contratação coletiva mais favorável.</p>
+
+            <h3 style="color: #1e293b; margin-top: 20px;">3. O Impacto do Lay-off nos Cálculos</h3>
+            <p>Muitos trabalhadores questionam se o período em Lay-off afeta a rescisão. Para efeitos de antiguidade, o tempo conta na totalidade. No entanto, para o cálculo dos subsídios de Natal e Férias, se houve suspensão do contrato, o valor pode ser reduzido proporcionalmente ao tempo parado, mantendo-se o direito aos mínimos legais estabelecidos pela Segurança Social.</p>
+
+            <h3 style="color: #1e293b; margin-top: 20px;">4. Prazos de Aviso Prévio</h3>
+            <p>O trabalhador que pretenda demitir-se deve cumprir o aviso prévio: 30 dias para contratos com menos de 2 anos e 60 dias para contratos com mais de 2 anos. O não cumprimento pode resultar na obrigação de pagar à empresa o valor correspondente ao período em falta.</p>
+        </article>
+
+        <footer style="text-align: center; margin-top: 50px; padding: 40px 0; border-top: 1px solid #e2e8f0;">
+            <div style="margin-bottom: 20px;">
+                <a href="privacidade.html" style="margin: 0 15px; color: #64748b; text-decoration: none;">Política de Privacidade</a>
+                <a href="termos.html" style="margin: 0 15px; color: #64748b; text-decoration: none;">Termos de Uso</a>
+                <a href="contacto.html" style="margin: 0 15px; color: #64748b; text-decoration: none;">Contacto</a>
+            </div>
+            <p style="color: #94a3b8; font-size: 0.85rem;">© 2026 Calculadora de Rescisão - Simulador Independente ACT</p>
+        </footer>
+    </div>
     <div class="container">
         <header style="text-align: center; margin-bottom: 20px;">
             <h1>Calculadora de Rescisão Profissional</h1>
